# diesel-repository

./: Cargo.toml  README.md
diesel-repository/: Cargo.toml
diesel-repository-macro/: Cargo.toml
diesel-repository-macro-async/: Cargo.toml
diesel-repository-macro-async/src/: lib.rs
diesel-repository-macro/src/: lib.rs
diesel-repository-test-async/: Cargo.toml
diesel-repository-test-async/src/: lib.rs  main.rs
diesel-repository-test-sync/: Cargo.toml
diesel-repository-test-sync/src/: lib.rs
diesel-repository-trait/: Cargo.toml
diesel-repository-trait/src/: lib.rs
diesel-repository-trait/src/model/: mod.rs
diesel-repository-trait/src/repo/: asynchronous.rs  mod.rs  synchronous.rs
examples/diesel-repository-test-async/: Cargo.toml
examples/diesel-repository-test-async/src/: main.rs
examples/diesel-repository-test-sync/: Cargo.toml
examples/diesel-repository-test-sync/src/: main.rs
