[workspace]
members = [
    "diesel-repository",
    "diesel-repository-trait",
    "diesel-repository-macro",
    "diesel-repository-macro-async",
    "diesel-repository-test-async",
    "diesel-repository-test-sync",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Stephane <selastlambou@protonmail.com>"]

[workspace.dependencies]
diesel-repository = { path = "diesel-repository" }
diesel-repository-trait = { path = "diesel-repository-trait" }
diesel-repository-macro = { path = "diesel-repository-macro" }
diesel-repository-macro-async = { path = "diesel-repository-macro-async" }

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1", features = ["full"] }
trybuild = "1.0"

async-trait = "0.1"
diesel = { version = "2.0", features = ["sqlite"] }
diesel-async = { version = "0" }
tokio = { version = "1.0" }
anyhow = { version = "1.0" }
