[workspace]
members = [
    "packages/diesel-repository",
    "packages/diesel-repository-trait",
    "packages/diesel-repository-macro",
    "packages/diesel-repository-macro-async",
    "packages/diesel-repository-macro-core", 
    "packages/diesel-repository-macro-sync"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Stephane Segning <selastlambou@protonmail.com>"]


[workspace.dependencies]
diesel-repository = { path = "packages/diesel-repository" }
diesel-repository-trait = { path = "packages/diesel-repository-trait" }
diesel-repository-macro = { path = "packages/diesel-repository-macro" }
diesel-repository-macro-core = { path = "packages/diesel-repository-macro-core" }
diesel-repository-macro-async = { path = "packages/diesel-repository-macro-async" }
diesel-repository-macro-sync = { path = "packages/diesel-repository-macro-sync" }

proc-macro-error2 = "2"
proc-macro2 = "1.0"
quote = "1"
darling = { version = "0" }
syn = { version = "2", features = ["full"] }
trybuild = "1.0"

async-trait = "0.1"
diesel = { version = "2.0" }
diesel-async = { version = "0", features = ["pool", "deadpool", "postgres"] }
tokio = { version = "1.0" }
anyhow = { version = "1.0" }
