[package]
name = "diesel-repository-test-async"
edition = "2021"
version.workspace = true
authors.workspace = true
publish = false

[dependencies]
diesel-repository = { path = "../diesel-repository", features = ["async"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
diesel = { workspace = true, features = ["sqlite"] }
diesel-async = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }