[package]
name = "diesel-repository-test-async"
edition = "2021"
publish = false
version = "0.1.0"

[workspace]

[dependencies]
diesel-repository = { path = "../../packages/diesel-repository", features = ["async"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
diesel = { version = "2.0" }
diesel-async = { version = "0" }
anyhow = { version = "1.0" }
